chapitres/14/original/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  labels:
    app: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      volumes:
        - name: maildir
          persistentVolumeClaim: { claimName: pvc-mailpit }
      containers:
        - image: axllent/mailpit
          name: mailpit
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /maildir
              name:      maildir
          command:
            - "./mailpit"
            - "--db-file=/maildir/mailpit.db"
